styling of the home page

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,19 @@
-<a href="/">Home</a>
-<a href="/login">Login</a>
-<a href="/signup">Signup</a>
+
+  <nav >
+      <ul id="nav">
+      <li>
+        <a class="nav-item" href="index.html " class="logo">
+          <h1 id="logo-text">
+            <span class="main-header-p">P</span><span>roject</span> </span><span class="main-header-p">M</span><span>anager</span>
+          </h1>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="login" class="nav-link" id="nav-link">Login</a>
+      </li>
+    </ul>
+  </nav>
+
+<!-- <li class="nav-item">
+      <a href="signup" class="nav-link" id="nav-link">Register</a>
+    </li> -->
