displays list of tasks, working on details

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,10 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="login" class="nav-link" id="nav-link">Login</a>
+        <a href="signup" class="nav-link" id="nav-link">Signup</a>
+      </li>
+      <li class="nav-item">
+        <a href="login.html" class="nav-link" id="nav-link">Login</a>
       </li>
     </ul>
   </nav>
