--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,15 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="login" class="nav-link" id="nav-link">Login</a>
+        <a href="task" class="nav-link" id="nav-link">Login</a>
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">Task Type</button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="#">Unclaimed</a>
+            <a href="#">Claimed</a>
+            <a href="#">Done</a>
+          </div>
+        </div>
       </li>
     </ul>
   </nav>
