home page link gets changed to user home page when logged in, and signout is possible

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,7 @@
-
   <nav >
       <ul id="nav">
       <li>
-        <a class="nav-item" href="index.html " class="logo">
+        <a id="home-nav" class="nav-item" href="index.html " class="logo">
           <h1 id="logo-text">
             <span class="main-header-p">P</span><span>roject</span> </span><span class="main-header-p">M</span><span>anager</span>
           </h1>
@@ -11,6 +10,7 @@
       <li class="nav-item">
         <a href="login.html" class="nav-link" id="login">Login</a>
         <a href="signup" class="nav-link" id="signup">Signup</a>
+        <a href="/" class="nav-link hide" id="logout">Logout</a>
         <div class="dropdown">
           <button onclick="myFunction()" id="taskBtn" class="dropbtn">Task Type</button>
           <div id="myDropdown" class="dropdown-content">
