--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,18 +7,18 @@
           </h1>
         </a>
       </li>
-      <li class="nav-item">
+      <li id="actions" class="nav-item">
         <a href="login.html" class="nav-link" id="login">Login</a>
         <a href="signup" class="nav-link" id="signup">Signup</a>
         <a href="/" class="nav-link hide" id="logout">Logout</a>
         <div class="dropdown">
           <button onclick="myFunction()" id="taskBtn" class="dropbtn">Task Type</button>
-          <div id="myDropdown" class="dropdown-content">
-            <!-- <a href="#">Unclaimed</a>
+          <!-- <div id="myDropdown" class="dropdown-content">
+            <a href="#">Unclaimed</a>
             <a href="#">Claimed</a>
-            <a href="#">Done</a> -->
+            <a href="#">Done</a>
             <ul class="filter-selection"></ul>
-          </div>
+          </div> -->
         </div>
         
       </li>
