--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,12 @@
 img {
     width: 100%;
 }
+
+#actions{
+    display:flex;
+    justify-content: space-between;
+}
+
+#actions a {
+    padding: 5px;
+}
