--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -49,18 +49,22 @@
     grid-column: 1;
     text-align: center;
     align-self: center;
+    margin: 0;
+    
 }
 
 #new-task{
-    bottom: 200px;
+    bottom: 20px;
     right: 20px;
     margin: 10px;
     position: fixed;
-    width: 100px;
-    height: 50px;
+    width: 200px;
+    height: 100px;
+    font-size: xx-large;
 }
 
 /* The Modal (background) */
+
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -80,8 +84,18 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 200px; /* Could be more or less, depending on screen size */
   }
+
+label{
+    margin: 5px;
+}
+  #taskform{
+      display: flex;
+      flex-direction: column;
+      /* max-width: 200px; */
+  }
+
   
   /* The Close Button */
   #close {
@@ -97,3 +111,9 @@
     text-decoration: none;
     cursor: pointer;
   }
+
+  #submitButton {
+      font-size: large;
+      text-align: center;
+  }
+
