--- a/src/css/template.css
+++ b/src/css/template.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Quicksand:wght@300;700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    font-family: 'PT Sans', Sans-Serif;
+}
+
 html {
     margin: 0;
 }
@@ -69,7 +75,7 @@ footer {
     display: none;
 }
 
-@media screen and (max-width: 600px) { 
+/* @media screen and (max-width: 600px) { 
     #taskBtn {
         display: block; 
     }
@@ -84,4 +90,4 @@ footer {
         
 
     }
-}
+}  */
